--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "firebase": "^11.6.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.6",
     "tailwindcss": "^3.3.0"
   },
   "scripts": {
