--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.0",
     "firebase": "^11.6.0",
+    "lucide-react": "^0.487.0",
     "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
